<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="facebook_application_id" translatable="false">423688198552527</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb423688198552527</string>
    <string name="menu_map_view_title">Map View</string>
    <string name="menu_list_view_title">List View</string>
    <string name="menu_workmates_title">Workmates</string>
    <string name="title_activity_maps">Map</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="main_title" translatable="false">Go4Lunch</string>
    <string name="menu_login">Log in</string>
    <string name="menu_sort_distance_least">Distance: closest</string>
    <string name="menu_sort_workmates_most">Workmates: most</string>
    <string name="menu_sort_workmates_least">Workmates: least</string>
    <string name="menu_sort_rating_most">Rating: best</string>
    <string name="menu_sort_rating_least">Rating: worst</string>
    <string name="openH24">Open 24/7</string>
    <string name="open_until">Open until</string>
    <string name="closed">Closed. Opens at</string>
    <string name="no_opening_infos">No opening information</string>
    <string name="eats_at">is eating at:</string>
    <string name="is_joining">is joining!</string>
    <string name="hasnt_chosen">hasn\'t decided yet.</string>
    <string name="no_restaurant_selected">No restaurant selected</string>
    <string name="notification_title">Your lunch</string>
    <string name="default_notification_channel_id" translatable="false">4fe794ea-4e71-41d0-8ab9-58bfe12722b1</string>
    <string name="with">With</string>
    <string name="workmate_maybe_plural">workmate(s)</string>
    <string name="channel_name">Message coming from Go4lunch</string>
    <string name="youre_eating_at">You\'re eating at:</string>
    <string name="menu_sort_distance_most">Distance: furthest</string>
    <string name="notify_me_at_lunch_time">Notify me at lunch time</string>
    <string name="back">Back</string>
    <string name="i_m_hungry">I\'m Hungry!</string>
    <string name="available_workmates">Available workmates</string>
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="website">Website</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_your_lunch">YOUR LUNCH</string>
    <string name="login_subtitle">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="connected">Connected</string>
    <string name="connection_canceled">The connection was canceled</string>
    <string name="no_internet">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
</resources>
