<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group_1">
        <item
            android:id="@+id/menu_lunch"
            android:icon="@drawable/ic_restaurant_menu_white_24dp"
            android:title="@string/menu_your_lunch" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout_white_24dp"
            android:title="@string/menu_logout" />
    </group>
    <group
        android:id="@+id/menu_group_2"
        android:visible="false">
        <item
            android:id="@+id/menu_login"
            android:icon="@drawable/ic_logout_white_24dp"
            android:title="@string/menu_login" />
    </group>
</menu>