<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="restaurant"
            type="com.guilhempelissier.go4lunch.model.FormattedRestaurant" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/restaurant_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="400dp"
            android:adjustViewBounds="true"
            android:maxHeight="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/restaurant_eat_here_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/restaurant_infos_cardview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_image_view"
            android:src="@{restaurant.isMyLunch ? @drawable/ic_check_circle_green_24dp : @drawable/ic_add_black_24dp}" />

        <androidx.cardview.widget.CardView
            android:id="@+id/restaurant_infos_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FF5722"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_image_view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/restaurant_view_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@{restaurant.name}"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Le Zinc" />

                <TextView
                    android:id="@+id/restaurant_view_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@{restaurant.address}"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/restaurant_view_name"
                    tools:text="12 rue du Faubourg Poissonnière" />

                <ImageView
                    android:id="@+id/restaurant_star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_star_yellow_24dp"
                    android:visibility="@{restaurant.stars >= 1 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/restaurant_view_name"
                    app:layout_constraintStart_toEndOf="@+id/restaurant_view_name"
                    app:layout_constraintTop_toTopOf="@+id/restaurant_view_name" />

                <ImageView
                    android:id="@+id/restaurant_star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_yellow_24dp"
                    android:visibility="@{restaurant.stars >= 2 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/restaurant_star1"
                    app:layout_constraintStart_toEndOf="@+id/restaurant_star1"
                    app:layout_constraintTop_toTopOf="@+id/restaurant_star1" />

                <ImageView
                    android:id="@+id/restaurant_star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_yellow_24dp"
                    android:visibility="@{restaurant.stars == 3 ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/restaurant_star2"
                    app:layout_constraintStart_toEndOf="@+id/restaurant_star2"
                    app:layout_constraintTop_toTopOf="@+id/restaurant_star2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/restaurant_actions_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_infos_cardview">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/restaurant_call_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:drawableTop="@drawable/ic_call_orange_24dp"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/call"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/restaurant_like_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:drawableTop="@{restaurant.isLikedByCurrentUser ? @drawable/ic_star_orange_24dp : @drawable/ic_star_border_orange_24dp}"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/like"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/restaurant_website_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:drawableTop="@drawable/ic_website_orange_24dp"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/website"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/restaurant_view_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_actions_cardview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

